--- a/src/assets/iconfont/iconfont.css
+++ b/src/assets/iconfont/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 4463451 */
-  src: url('iconfont.woff2?t=1712564001550') format('woff2'),
-       url('iconfont.woff?t=1712564001550') format('woff'),
-       url('iconfont.ttf?t=1712564001550') format('truetype');
+  src: url('iconfont.woff2?t=1713253964144') format('woff2'),
+       url('iconfont.woff?t=1713253964144') format('woff'),
+       url('iconfont.ttf?t=1713253964144') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,10 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-yunshangchuan:before {
+  content: "\eb2c";
 }
 
 .icon-wenhao:before {
