--- a/src/assets/login.less
+++ b/src/assets/login.less
@@ -1,6 +1,16 @@
 *{margin:0;padding:0;}
 
-.login_container_bg{background:url(./login_bg.png) no-repeat center top;background-size: cover;width:100vw;height:100vh;position:relative;font-family:'微软雅黑';}
+@keyframes login_container_bg_animation
+{
+	from {opacity: 0;}
+	to {opacity: 1;}
+}
+.login_container_bg{background:url(./login_bg.png) no-repeat center top;background-size: cover;width:100vw;height:100vh;position:relative;font-family:'微软雅黑';
+animation:login_container_bg_animation 2s;
+}
+
+
+
 .login_container {width:34vw;height:84vh;position:absolute;top:50%;right:13vw;background:url(./login_bg1.png) no-repeat center top;background-size:100% 100%;margin-top:-42vh;box-sizing: border-box;
   a{text-decoration: none;color:#434761;}
 }
