--- a/src/assets/login.less
+++ b/src/assets/login.less
@@ -5,10 +5,10 @@
 	from {opacity: 0;}
 	to {opacity: 1;}
 }
-.login_container_bg{background:url(./login_bg.png) no-repeat center top;background-size: cover;width:100vw;height:100vh;position:relative;font-family:'微软雅黑';
-transition:1s;
-animation:login_container_bg_animation 2s;
+
+.login_container_bg{background:url(./login_bg.png) no-repeat center top;background-size: cover;width:100vw;height:100vh;position:relative;font-family:'微软雅黑';opacity:0;
 }
+.login_container_bg.entrance{animation:login_container_bg_animation 2s;opacity: 1;}
 .login_container_bg.exit{opacity:0;}
 
 
