为了同步线上代码20240522.1807，解决解决

--- a/src/assets/login.less
+++ b/src/assets/login.less
@@ -1,3 +1,7 @@
+body{width:1920px;
+  transform:scale(.73);
+  transform-origin:left top;overflow-x:hidden;}
+
 *{margin:0;padding:0;}
 
 @keyframes login_container_bg_animation
