重新提交代码20240522.2054

--- a/src/assets/login.less
+++ b/src/assets/login.less
@@ -1,6 +1,6 @@
-body{width:1920px;
-  transform:scale(.73);
-  transform-origin:left top;overflow-x:hidden;}
+// body{width:1920px;
+//   transform:scale(.73);
+//   transform-origin:left top;overflow-x:hidden;}
 
 *{margin:0;padding:0;}
 
