--- a/src/assets/login.less
+++ b/src/assets/login.less
@@ -1,7 +1,3 @@
-// body{width:1920px;
-//   transform:scale(.73);
-//   transform-origin:left top;overflow-x:hidden;}
-
 *{margin:0;padding:0;}
 
 @keyframes login_container_bg_animation
@@ -10,7 +6,7 @@
 	to {opacity: 1;}
 }
 
-.login_container_bg{background:url(./login_bg.png) no-repeat center top;background-size: cover;width:100vw;height:100vh;position:relative;font-family:'微软雅黑';opacity:0;
+.login_container_bg{background:url(./login_bg.png) no-repeat center top;background-size: cover;height:100%;position:relative;font-family:'微软雅黑';opacity:0;
 }
 .login_container_bg.entrance{animation:login_container_bg_animation 1s;opacity: 1;}
 .login_container_bg.exit{opacity:0;}
