ElMessageBox 自定义类名 避免全局样式冲突

--- a/src/assets/style.less
+++ b/src/assets/style.less
@@ -124,7 +124,7 @@
 
 
 //ElMessageBox全局样式
-.el-message-box{
+.selfElMessageBox{
     padding: 0;
     --el-messagebox-width: 500px;
     .el-message-box__header.show-close{
