--- a/src/assets/style.less
+++ b/src/assets/style.less
@@ -152,6 +152,7 @@
             }
             .el-message-box__message{
                 text-align: center;
+                padding: 0 30px;
             }
         }
     }
