--- a/src/assets/PcBaseStyle.css
+++ b/src/assets/PcBaseStyle.css
@@ -5,7 +5,7 @@ html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, a, img,  ol, u
 dl, dt, dd,table{margin:0; padding:0;list-style:none;}
 input { margin:0; padding:0; }
 h1,h2,h3,h4,h5,h6 {font-size:12px; font-weight:normal;}
-a,area{blr:expression(this.onFocus=this.blur())}
+a,area{outline:none;}
 a {text-decoration:none;}
 a:hover { text-decoration:underline;}
 .boxcenter { margin:0 auto;}
@@ -105,7 +105,5 @@ body{font-size:14px;color:#666;height:100%;position:relative;}
 .marginRight95{margin-right:95px !important;}
 .marginRight100{margin-right:100px !important;}
 
-/* screen 992 */
-@media screen and (max-width:992px){ }
 
 
